k8s/loadgenerator.yaml
# Schildwächter's Genteel Beacon
# Copyright Carsten Thiel 2025-2026
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: loadgenerator

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: loadgenerator
  labels:
    app: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      name: loadgenerator
      labels:
        app: loadgenerator
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: loadgenerator
          image: schildwaechter/k8sdebugger:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "80m"
            limits:
              memory: "64Mi"
              cpu: "80m"
          command: ["/bin/bash", "-c", "--"]
          args: ["while true; do curl -vs http://genteelbeacon.local/telegram; done;"]
