k8s/genteelbeacon.yaml
# Schildwächter's Genteel Beacon
# Copyright Carsten Thiel 2025-2026
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: genteelbeacon

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaslightparlour
  namespace: genteelbeacon
  labels:
    app: gaslightparlour
    genteelbeacon: gaslightparlour
    genteelrole: relay
    schildwaechter: genteelbeacon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaslightparlour
  template:
    metadata:
      labels:
        app: gaslightparlour
        genteelbeacon: gaslightparlour
        genteelrole: relay
        schildwaechter: genteelbeacon
    spec:
      containers:
        - name: genteelbeacon
          image: schildwaechter/genteelbeacon:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "10m"
          livenessProbe:
            httpGet:
              path: /livez
              port: metricsport
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: metricsport
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - name: servingport
              containerPort: 1333
            - name: metricsport
              containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: gaslightparlour
  namespace: genteelbeacon
  labels:
    app: gaslightparlour
    genteelbeacon: gaslightparlour
spec:
  selector:
    app: gaslightparlour
  ports:
    - protocol: TCP
      port: 1333
      targetPort: servingport

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velvettimepiece
  namespace: genteelbeacon
  labels:
    app: velvettimepiece
    genteelbeacon: velvettimepiece
    genteelrole: clock
    schildwaechter: genteelbeacon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velvettimepiece
  template:
    metadata:
      labels:
        app: velvettimepiece
        genteelbeacon: velvettimepiece
        genteelrole: clock
        schildwaechter: genteelbeacon
    spec:
      containers:
        - name: genteelbeacon
          image: schildwaechter/genteelbeacon:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "10m"
          livenessProbe:
            httpGet:
              path: /livez
              port: metricsport
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: metricsport
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - name: servingport
              containerPort: 1333
            - name: metricsport
              containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: velvettimepiece
  namespace: genteelbeacon
  labels:
    app: velvettimepiece
    genteelbeacon: velvettimepiece
spec:
  selector:
    app: velvettimepiece
  ports:
    - protocol: TCP
      port: 1333
      targetPort: servingport
