k8s/grumpygearsmith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grumpygearsmith
  namespace: genteelbeacon
  labels:
    app: grumpygearsmith
    genteelbeacon: grumpygearsmith
    schildwaechter: genteelbeacon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grumpygearsmith
  template:
    metadata:
      labels:
        app: grumpygearsmith
        genteelbeacon: grumpygearsmith
    spec:
      volumes:
        - name: cert-volume
          secret:
            secretName: grumpygearsmith
      containers:
        - name: genteelbeacon
          image: schildwaechter/genteelbeacon:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "10m"
          ports:
            - name: https
              containerPort: 6443
          volumeMounts:
            - name: cert-volume
              readOnly: true
              mountPath: /cert
      serviceAccountName: grumpygearsmith
---
apiVersion: v1
kind: Service
metadata:
  name: grumpygearsmith
  namespace: genteelbeacon
  labels:
    app: grumpygearsmith
    genteelbeacon: grumpygearsmith
spec:
  selector:
    app: grumpygearsmith
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
