k8s/gateway.yaml
# Schildwächter's Genteel Beacon
# Copyright Carsten Thiel 2025-2026
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gildedgateway
  namespace: genteelbeacon
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gildedgateway
  namespace: genteelbeacon
spec:
  parentRefs:
    - name: gildedgateway
  hostnames:
    - "genteelbeacon.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gaslightparlour
          port: 1333
